welcome.lessons.welcome.traversal.Snake.scala.error
SnakeBuggle:26: error: ';' expected but integer literal found.
		for (i <- 1 to (getMondeHauteur()-1))/2 {
                                                      ^